--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,227 @@
-
-// Fonts
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
-// Variables
-@import "variables";
-
 // Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+
+@mixin transition-set1($property){
+    -webkit-transition: $property 1s; 
+    -moz-transition: $property 1s;
+    -ms-transition: $property 1s;  
+    transition: $property 1s;
+}
+
+@mixin transition-set-hs($property){
+    -webkit-transition: $property 0.2s; 
+    -moz-transition: $property 0.2s;
+    -ms-transition: $property 0.2s;  
+    transition: $property 0.2s;
+}
+$navbar-color: #fff;
+
+html,body{width:100%; margin:0; padding:0;}
+
+div{
+  margin:0;
+}
+
+.navbar{
+  border: none;
+}
+
+/* universal */
+
+body {
+  background-color:#F5F5F5;
+  padding-top: 60px;
+  height:100%;
+}
+
+section {
+  overflow: auto;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.jumbotron {
+  text-align: center;
+}
+
+/* typography */
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
+
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #777;
+}
+
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+
+/* header */
+
+.navbar-inverse {
+  background-color: $navbar-color;
+}
+
+#logo {
+  float: left;
+  margin-right: 60px;
+  font-size: 1.7em;
+  color: #fff;
+  text-decoration: none;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+  &:hover {
+    color: #fff;
+  }
+
+}
+
+.nav-item {
+  display:block;
+  float: left;
+  margin-left:20px;
+  font-size: 1.2em;
+  color: #000;
+  background-color: #FFF;
+  text-decoration: none;
+  letter-spacing: -1px;
+  margin-top:20px;
+  padding: 9px;
+  &:hover {
+    color: #FFF;
+    background-color: #000;
+    text-decoration: none;
+  }
+  
+  @include transition-set1(color);
+  @include transition-set1(background-color);
+}
+
+.footer{
+	position:absolute;
+	bottom:0px;
+}
+
+
+
+
+//product
+.p-wrapper{
+  width:100%;
+  height:100%;
+  background-color:#F5F5F5;
+  padding-top:5px;
+}
+
+.p-content{
+  width:1080px;
+  margin:auto;
+  margin-top:20px;
+}
+
+.p-header-box{
+  display:flex;
+  justify-content: flex-start;
+}
+
+.p-title-icon{
+  width:5px;
+  height:20px;
+  margin-top:10px;
+  margin-right:20px;
+  background:black;
+}
+.p-title{
+  width:300px;
+}
+
+#p-title{
+  font-size:24px;
+  font-family:Roboto;
+}
+
+.title-divider{
+  width:100%;
+  height:2px;
+  border:0;
+  margin-left:25px;
+  border-top:solid 1px #BBBBBB;
+}
+
+.p-filter{
+  &:hover{
+    background:black;
+    color:white;
+  }
+  margin-top:20px;
+  margin-right:10px;
+  margin-bottom:20px;
+  width:100px;
+  height:40px;
+  border: solid 1px #BBBBBB;
+  color:#AAAAAA;
+  background-color:white;
+}
+
+
+.p-item{
+  a {
+    text-decoration:none;
+    color:#BBBBBB;
+  }
+
+  background-color:white;
+  width:24%;
+  height:400px;
+  margin-right:1%;
+  float:left;
+  margin-bottom:10px;
+
+}
+
+.p-buttons,.p-item-list{
+  padding-left:25px;
+}
+
+.content-list{
+  overflow:hidden;
+}
+
+.p-item-img{
+  padding-top:10px;
+  width:100%;
+  height:320px;
+}
+
+.p-img{
+  width:50%;
+  margin:auto;
+  &:hover{
+  width:55%;
+  }
+  @include transition-set-hs(width);
+}
+
+.p-item-info{
+  padding-left:20px;
+  padding-bottom:10px;
+}
