--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8458,6 +8458,7 @@ p {
   letter-spacing: -1px;
   margin-top: 20px;
   padding: 9px;
+  border-radius: 10px;
   -webkit-transition: color 1s;
   transition: color 1s;
   -webkit-transition: background-color 1s;
@@ -8465,6 +8466,12 @@ p {
 }
 
 .nav-item:hover {
+  color: #FFF;
+  background-color: #000;
+  text-decoration: none;
+}
+
+.nav-item.active-item {
   color: #FFF;
   background-color: #000;
   text-decoration: none;
@@ -8478,12 +8485,19 @@ p {
   background-color: white;
   -webkit-box-shadow: 0px -1px 3px #DEDEDE;
           box-shadow: 0px -1px 3px #DEDEDE;
+  font-size: 12px;
   z-index: 20;
 }
 
 .footer .container {
   line-height: 100%;
   margin-top: 10px;
+}
+
+.flicker-box {
+  position: fixed;
+  width: 100%;
+  top: 100px;
 }
 
 .sec {
@@ -8527,17 +8541,19 @@ p {
 
 #home-slider {
   position: fixed;
-  width: 1200px;
-  height: 800px;
-  top: 150px;
+  width: 100%;
+  height: 100%;
+  top: 10px;
   left: 0;
   right: 0;
   margin: 0 auto;
+  background: white;
 }
 
 .carousel .slide {
   width: 1200px;
   margin: auto;
+  margin-top: 150px;
 }
 
 .carousel-inner img {
