--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -8350,36 +8350,6 @@ button.close {
   }
 }
 
-@media only screen and (min-width: 320px) {
-  html {
-    font-size: 40px;
-  }
-}
-
-@media only screen and (min-width: 640px) {
-  html {
-    font-size: 24px;
-  }
-}
-
-@media only screen and (min-width: 750px) {
-  html {
-    width: 750px;
-    font-size: 20px;
-  }
-}
-
-@media only screen and (min-width: 1242px) {
-  html {
-    font-size: 10px;
-  }
-}
-
-body {
-  font-size: 12px;
-  font-size: 1.2rem;
-}
-
 html,
 body {
   width: 100%;
@@ -8405,7 +8375,7 @@ ul {
 
 body {
   background-color: #F5F5F5;
-  padding-top: 6rem;
+  padding-top: 60px;
 }
 
 ::-webkit-scrollbar {
@@ -8452,42 +8422,30 @@ h2 {
 }
 
 p {
-  font-size: 14px;
-  font-size: 1.4rem;
-  line-height: 1.8rem;
+  font-size: 1.1em;
+  line-height: 1.7em;
   color: white;
 }
 
 /* header */
 
-.navbar-fixed-top {
-  width: 100%;
+.navbar-inverse {
   background-color: #fff;
-  height: 5rem;
 }
 
 #logo {
   float: left;
   margin-right: 60px;
+  font-size: 1.7em;
   color: #fff;
   text-decoration: none;
   letter-spacing: -1px;
+  padding-top: 9px;
   font-weight: bold;
 }
 
 #logo:hover {
   color: #fff;
-}
-
-#logo img {
-  padding-top: 10px;
-  width: 80px;
-}
-
-@media only screen and (min-width: 1242px) {
-  #logo img {
-    width: 40px;
-  }
 }
 
 .nav-item {
@@ -8520,32 +8478,21 @@ p {
   text-decoration: none;
 }
 
-div.nav-box {
-  width: 100%;
-}
-
-@media only screen and (min-width: 1243px) {
-  div.nav-box {
-    width: 80%;
-  }
-}
-
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 4rem;
+  height: 50px;
   background-color: white;
   -webkit-box-shadow: 0px -1px 3px #DEDEDE;
           box-shadow: 0px -1px 3px #DEDEDE;
-  font-size: 1rem;
+  font-size: 12px;
   z-index: 20;
 }
 
 .footer .container {
   line-height: 100%;
-  margin-top: 1rem;
-  width: 80%;
+  margin-top: 10px;
 }
 
 .flicker-box {
@@ -8572,9 +8519,9 @@ div.nav-box {
 }
 
 #section1 {
-  height: 100rem;
+  height: 1000px;
   width: 100%;
-  padding-top: 10rem;
+  padding-top: 100px;
   margin: auto;
   background: url("/img/home/sec1.jpg") no-repeat;
   background-size: cover;
@@ -8584,8 +8531,8 @@ div.nav-box {
 
 #section2 {
   position: absolute;
-  top: 180rem;
-  height: 100rem;
+  top: 1800px;
+  height: 1000px;
   width: 100%;
   margin: auto;
   background: url("/img/home/sec2.jpg");
@@ -8597,7 +8544,7 @@ div.nav-box {
   position: fixed;
   width: 100%;
   height: 100%;
-  top: 1rem;
+  top: 10px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -8646,8 +8593,8 @@ div.nav-box {
 }
 
 .p-product {
-  padding-top: 2rem;
-  padding-bottom: 2.5rem;
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 .clearfloat {
@@ -8656,7 +8603,7 @@ div.nav-box {
 }
 
 .p-content {
-  width: 80%;
+  width: 100%;
   height: 900px;
   min-height: 900px;
   margin: auto;
@@ -8666,7 +8613,7 @@ div.nav-box {
 .p-header-box {
   width: 80%;
   margin: auto;
-  padding-top: 3rem;
+  padding-top: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8676,24 +8623,32 @@ div.nav-box {
   color: white;
 }
 
+.content-list {
+  padding-bottom: 50px;
+}
+
+.content-list:after {
+  content: "";
+  height: 0;
+  visibility: hidden;
+  clear: both;
+  display: block;
+}
+
 .p-title-icon {
-  width: 0.4rem;
-  height: 1.5rem;
-  margin-top: 0.2rem;
-  margin-right: 0.5rem;
+  width: 5px;
+  height: 20px;
+  margin-top: 10px;
+  margin-right: 20px;
   background: white;
 }
 
 .p-title {
-  width: 30rem;
-}
-
-.p-title #p-subtitle {
-  font-size: 1rem;
+  width: 300px;
 }
 
 #p-title {
-  font: size 1rem;
+  font-size: 2rem;
   font-family: Roboto;
 }
 
@@ -8707,40 +8662,34 @@ div.nav-box {
 
 .title-divider {
   width: 100%;
-  height: 0.2rem;
+  height: 2px;
   border: 0;
-  margin-left: 2.5rem;
-  border-top: solid 0.1rem #BBBBBB;
+  margin-left: 25px;
+  border-top: solid 1px #BBBBBB;
 }
 
 .p-daohang {
   width: 100%;
   background-color: black;
-  padding-top: 2rem;
+  padding-top: 20px;
 }
 
 .p-filters {
-  width: 80%;
+  width: 1220px;
   margin: auto;
-  padding-top: 2rem;
+  padding-top: 20px;
   background: black;
   color: white;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-@media only screen and (min-width: 1243px) {
-  .p-filters {
-    width: 1220px;
-  }
+  border-radius: 5px;
+  font-size: 1.5rem;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .p-filters hr {
   width: 100%;
-  margin-top: 1rem;
+  margin-top: 10px;
 }
 
 .p-filter {
@@ -8755,7 +8704,7 @@ div.nav-box {
   height: 30px;
   text-align: center;
   line-height: 30px;
-  font-size: 1rem;
+  font-size: 1.5rem;
   border: none;
   background: black;
 }
@@ -8789,10 +8738,10 @@ div.nav-box {
 
 .p-item {
   background-color: white;
-  width: 100%;
-  margin: 1rem;
+  width: 285px;
+  margin: 10px;
   margin-bottom: 20px;
-  padding-bottom: 1rem;
+  padding-bottom: 10px;
   border-radius: 5px;
   -webkit-box-shadow: 1px 1px 3px #DEDEDE;
           box-shadow: 1px 1px 3px #DEDEDE;
@@ -8803,19 +8752,12 @@ div.nav-box {
   color: #BBBBBB;
 }
 
-@media only screen and (min-width: 1243px) {
-  .p-item {
-    width: 285px;
-  }
-}
-
 .p-buttons {
   padding-left: 0px;
 }
 
 .content-list {
-  padding-bottom: 5rem;
-  width: 100%;
+  width: 1220px;
   margin: auto;
   padding-top: 20px;
   display: -webkit-box;
@@ -8828,20 +8770,6 @@ div.nav-box {
   -ms-flex-line-pack: start;
       align-content: flex-start;
   background: black;
-}
-
-.content-list:after {
-  content: "";
-  height: 0;
-  visibility: hidden;
-  clear: both;
-  display: block;
-}
-
-@media only screen and (min-width: 1243px) {
-  .content-list {
-    width: 1220px;
-  }
 }
 
 .p-img-box {
@@ -8864,7 +8792,7 @@ div.nav-box {
 .p-item-info {
   width: 100%;
   margin: auto;
-  margin-top: 1rem;
+  margin-top: 10px;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8901,7 +8829,7 @@ div.nav-box {
 
 .info-title {
   width: 100%;
-  padding-top: 1rem;
+  padding-top: 10px;
   text-align: center;
 }
 
@@ -8968,7 +8896,7 @@ div .table-box {
   margin: auto;
   background: black;
   color: #EEE;
-  padding-bottom: 1rem;
+  padding-bottom: 10px;
   margin-bottom: 50px;
   border-radius: 5px;
 }
@@ -9030,7 +8958,7 @@ a:visited {
 /*位置属性*/
 
 .marTop10 {
-  margin-top: 1rem;
+  margin-top: 10px;
 }
 
 .left {
@@ -9077,7 +9005,7 @@ a:visited {
 
 #header span {
   position: absolute;
-  right: 1rem;
+  right: 10px;
   top: 0px;
   color: #9A9A9A;
   font-size: 12px;
@@ -9093,7 +9021,7 @@ a:visited {
 
 #wrapper {
   width: 700px;
-  margin-right: 1rem;
+  margin-right: 10px;
 }
 
 #picSlideWrap {
@@ -9105,7 +9033,7 @@ a:visited {
 
 .imgnav {
   width: 450px;
-  margin: 1rem auto;
+  margin: 10px auto;
 }
 
 #content {
@@ -9242,7 +9170,7 @@ a:visited {
   height: 116px;
   overflow: hidden;
   position: relative;
-  top: 1rem;
+  top: 10px;
   margin: 0 auto;
 }
 
@@ -9250,7 +9178,7 @@ a:visited {
   cursor: pointer;
   position: absolute;
   top: 32px;
-  left: 1rem;
+  left: 10px;
   z-index: 9;
 }
 
@@ -9258,7 +9186,7 @@ a:visited {
   cursor: pointer;
   position: absolute;
   top: 32px;
-  right: 1rem;
+  right: 10px;
   z-index: 9;
 }
 
