--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -271,7 +271,7 @@ div.nav-box{
 //product
 .p-header{
   width: 100%;
-  height:120px;
+  height:8rem;
   //background: url('/img/bg-banner.jpg');
   background: #000;
   color:white;
