--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8726,10 +8726,9 @@ div.nav-box {
   background: black;
   color: white;
   border-radius: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-right: 0.6rem;
 }
 
 @media only screen and (min-width: 1243px) {
@@ -8749,14 +8748,15 @@ div.nav-box {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
   color: white;
-  margin-left: 15px;
-  padding-left: 4px;
-  padding-right: 4px;
-  height: 30px;
+  margin-left: 1.2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  height: 2.5rem;
   text-align: center;
-  line-height: 30px;
-  font-size: 1rem;
+  line-height: 2.5rem;
+  font-size: 1.5rem;
   border: none;
+  border-radius: 0.5rem;
   background: black;
 }
 
@@ -8806,6 +8806,18 @@ div.nav-box {
 @media only screen and (min-width: 1243px) {
   .p-item {
     width: 285px;
+  }
+}
+
+@media only screen and (min-width: 1243px) {
+  li.p-item:nth-child(4n) {
+    margin-right: 0;
+  }
+}
+
+@media only screen and (min-width: 1243px) {
+  li.p-item:nth-child(4n+1) {
+    margin-left: 0;
   }
 }
 
