--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -361,10 +361,9 @@ div.nav-box{
   background: black;
   color:white;
   border-radius: 0.5rem;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-right: 0.6rem;
   hr{
     width:100%;
     margin-top:1rem;
@@ -389,14 +388,15 @@ div.nav-box{
     color:black;
     text-decoration: none;
   }
-  margin-left:15px;
-  padding-left:4px;
-  padding-right: 4px;
-  height:30px;
+  margin-left:1.2rem;
+  padding-left:0.5rem;
+  padding-right: 0.5rem;
+  height:2.5rem;
   text-align: center;
-  line-height: 30px;
-  font-size: 1rem;
+  line-height: 2.5rem;
+  font-size: 1.5rem;
   border: none;
+  border-radius: 0.5rem;
   //background-color: rgba(255, 255, 255, 0.3);
   background: black;
 }
@@ -431,7 +431,18 @@ div.nav-box{
   padding-bottom:1rem;
   border-radius: 5px;
   box-shadow: 1px 1px 3px #DEDEDE;
-}  
+}
+
+li.p-item:nth-child(4n){
+  @media only screen and (min-width:1243px) {
+    margin-right: 0;
+  }
+}
+li.p-item:nth-child(4n+1){
+  @media only screen and (min-width:1243px) {
+    margin-left: 0;
+  }
+}
 
 .p-buttons,{
   //padding-left:25px;
