--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,19 +19,20 @@
 $navbar-color: #fff;
 
 html{
-  @media only screen and (min-width:320px) {
-    font-size:40px;
-  }
-  @media only screen and (min-width:640px) {
-    font-size:24px;
-  }
-  @media only screen and (min-width:750px) {
-    width: 750px;
-    font-size: 20px;
-  }
-  @media only screen and (min-width:1242px) {
-    font-size:10px;
-  }
+  // @media only screen and (min-width:320px) {
+  //   font-size:10px;
+  // }
+  // @media only screen and (min-width:640px) {
+  //   font-size:24px;
+  // }
+  // @media only screen and (min-width:750px) {
+  //   width: 750px;
+  //   font-size: 20px;
+  // }
+  // @media only screen and (min-width:1242px) {
+  //   font-size:10px;
+  // }
+  font-size: 10px;
 }
 body{
   font-size: 12px;
