--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8350,8 +8350,28 @@ button.close {
   }
 }
 
-html {
-  font-size: 10px;
+@media only screen and (min-width: 320px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 640px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 750px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 1242px) {
+  html {
+    font-size: 10px;
+  }
 }
 
 body {
@@ -8473,7 +8493,7 @@ p {
   display: block;
   float: left;
   margin-left: 20px;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   color: #000;
   background-color: #FFF;
   text-decoration: none;
